fix: route stop list scrolling on mobile

--- a/app/component/route.scss
+++ b/app/component/route.scss
@@ -62,6 +62,7 @@ $margin-left-right: 21.3px;
 }
 
 .route-page-content {
+  max-height: 100vh;
   overflow-x: hidden;
   overflow-y: auto;
   padding: 24px $margin-left-right 0;
